[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmdb-index"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0,<9.0",
    "polars>=1.27.0,<2.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
tmdb-index = "tmdb_index:main"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.0.0,<2.0",
    "pytest-cov>=6.0.0,<7.0",
    "pytest>=8.0.0,<9.0",
    "ruff>=0.4.0",
]
