[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "tmdb-index"
version = "0.1.0"
readme = "README.md"
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8,<9",
    "polars>=1.27,<2",
    "tqdm>=4.0.1,<5",
]
scripts.tmdb-index = "tmdb_index:main"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.4",
    "types-tqdm>=4,<5",
]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
