[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "tmdb-index"
version = "1.0.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["click>=8.2,<9", "polars>=1.30,<2", "tqdm>=4.21,<5"]
scripts.tmdb-index = "tmdb_index:main"

[dependency-groups]
dev = [
    "mypy>=1.4,<2",
    "pytest>=8.4,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<2",
    "types-tqdm>=4.21,<5",
]

[tool.ruff]
lint.extend-select = ["I", "UP"]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
